[JW8-2286] Fix background and overflow.

--- a/src/css/jwplayer/flags/floatingplayer.less
+++ b/src/css/jwplayer/flags/floatingplayer.less
@@ -1,18 +1,23 @@
 .jw-flag-floating {
+    background-color: #000;
     background-size: cover;
-    overflow: visible;
+
+    &.jw-flag-dismiss,
+    &.jw-flag-header {
+        background-color: transparent;
+        background-image: linear-gradient(#000, #000);
+        background-position-y: 2em;
+        background-repeat: no-repeat;
+    }
 
     &.jw-flag-aspect-mode .jw-aspect {
         display: block;
     }
 
     .jw-wrapper {
-        overflow: visible;
         animation: jw-float 150ms cubic-bezier(0, 0.25, 0.25, 1) forwards 1;
         bottom: 1rem;
         right: 1rem;
-        height: auto;
-        margin-top: 2em;
         position: fixed;
         z-index: 1;
 
