--- a/src/css/jwplayer/imports/jwplayerlayout.less
+++ b/src/css/jwplayer/imports/jwplayerlayout.less
@@ -9,15 +9,10 @@
     overflow: hidden;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #000;
 
     /* disallow text-select highlighting.  Safari specific feature */
     -webkit-touch-callout: none;
     user-select: none;
-
-    * {
-        box-sizing: inherit;
-    }
 
     // Aspect Ratio styles
     &.jw-flag-aspect-mode {
@@ -91,7 +86,12 @@
 }
 
 .jw-wrapper {
-    &:extend(.jwplayer);
-    background-color: transparent;
-    height: 100%;
+    background-color: #000;
+    box-sizing: border-box;
+    height: inherit;
+    position: relative;
+
+    * {
+        box-sizing: inherit;
+    }
 }
